messaging_app/messaging_app/ blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: blue
  template:
    metadata:
      labels:
        app: messaging
        version: blue
    spec:
      containers:
        - name: messaging
          image: mnutemesgen/messaging-app-web:blue  # Replace with your blue version image
          ports:
            - containerPort: 8000

apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
    spec:
      containers:
        - name: django
          image: mnutemesgen/messaging-app-web:2.0   # ✅ Updated version
          ports:
            - containerPort: 8000
