messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
    spec:
      containers:
        - name: django
          image: mnutemesgen/messaging-app-web:2.0   
          ports:
            - containerPort: 8000
